# sappho

./: Cargo.toml  README.md
ast/: Cargo.toml
ast-core/: Cargo.toml
ast-core/src/: application.rs  core.rs  func.rs  letexpr.rs  lib.rs  literal.rs  lookup.rs  matchexpr.rs  object.rs  query.rs
ast-core/src/effects/: expr.rs  proc.rs  pure.rs  query.rs
ast-core/src/letexpr/: clause.rs
ast-core/src/matchexpr/: clause.rs
ast-core/src/proc/: procdef.rs  statement.rs
ast-reduced/: Cargo.toml
ast-reduced/src/: expr.rs  lib.rs  pattern.rs
ast-reduced/src/pattern/: unpack.rs
ast/ast/: Cargo.toml
ast/ast/src/: expr.rs  lib.rs  listexpr.rs  pattern.rs  provider.rs
ast/ast/src/pattern/: unpack.rs
ast/core/: Cargo.toml
ast/core/src/: application.rs  core.rs  effectexpr.rs  func.rs  letexpr.rs  lib.rs  literal.rs  lookup.rs  matchexpr.rs  object.rs  objectdef.rs  proc.rs  provider.rs  query.rs
ast/core/src/effects/: expr.rs
ast/core/src/letexpr/: clause.rs
ast/core/src/matchexpr/: clause.rs
ast/core/src/proc/: procdef.rs  statement.rs
ast/effect/: Cargo.toml
ast/effect/src/: effect.rs  lib.rs  proc.rs  pure.rs  query.rs
ast/fuzz/: Cargo.toml
ast/fuzz/src/: attrsimpls.rs  baseimpls.rs  containerimpls.rs  distext.rs  effectsimpls.rs  exprimpls.rs  fqpimpls.rs  fuzz.rs  idmapimpls.rs  letimpls.rs  lib.rs  listimpls.rs  matchimpls.rs  patternimpls.rs  recoreimpls.rs  wcase.rs
ast/reduced/: Cargo.toml
ast/reduced/src/: expr.rs  lfreduce.rs  lib.rs  pattern.rs  provider.rs
ast/reduced/src/pattern/: tests.rs  unpack.rs
ast/src/: application.rs  common.rs  effects.rs  expr.rs  exprimpl.rs  func.rs  letexpr.rs  lib.rs  listform.rs  literal.rs  lookup.rs  matchexpr.rs  object.rs  pattern.rs  query.rs  recursive.rs  universal.rs
ast/src/common/: func.rs
ast/src/effects/: proc.rs  pure.rs  query.rs
ast/src/letexpr/: clause.rs
ast/src/matchexpr/: clause.rs
ast/src/pattern/: list.rs  unpack.rs
ast/src/recursive/: apply.rs  lookup.rs
ast/src/universal/: lit.rs
cli/: Cargo.toml
cli/src/: cmds.rs  error.rs  lib.rs  log.rs  options.rs  run.rs  sourceopt.rs
cli/src/options/: runcmd.rs
east/: Cargo.toml
east/src/: application.rs  common.rs  effects.rs  expr.rs  fromimpl.rs  letexpr.rs  lib.rs  lookup.rs  matchexpr.rs  object.rs  pattern.rs  recursive.rs
east/src/effects/: fromfx.rs  proc.rs  pure.rs  query.rs
east/src/letexpr/: clause.rs
east/src/matchexpr/: clause.rs
east/src/object/: func.rs  query.rs
east/src/pattern/: tests.rs  unpack.rs
east/src/recursive/: apply.rs  letexpr.rs  lookup.rs
eval/: Cargo.toml
eval/src/: bind.rs  coerce.rs  effects.rs  error.rs  eval.rs  expr.rs  func.rs  lib.rs  list.rs  object.rs  query.rs  recursive.rs  scope.rs  tests.rs  thunk.rs  traits.rs  valref.rs  value.rs
eval/src/eval/: effects.rs  expr.rs  object.rs  recursive.rs  traits.rs  universal.rs
eval/src/expr/: application.rs  core.rs  effects.rs  letexpr.rs  listexpr.rs  listform.rs  literal.rs  lookup.rs  matchexpr.rs  object.rs
gast/: Cargo.toml
gast/src/: application.rs  core.rs  effects.rs  func.rs  letexpr.rs  lib.rs  listexpr.rs  listform.rs  literal.rs  lookup.rs  matchexpr.rs  object.rs  query.rs
gast/src/effects/: proc.rs
gast/src/letexpr/: clause.rs
gast/src/matchexpr/: clause.rs
integration-tests/: Cargo.toml  build.rs
integration-tests/src/: .gitignore  lib.rs  logic.rs  testlogic.rs
integration-tests/src/test-cases/attr-defs/: expected
integration-tests/src/test-cases/bind-failure-let-lit/: expected  input
integration-tests/src/test-cases/bind-failure-nested-mismatch/: expected  input-ignore
integration-tests/src/test-cases/bind-failure-unpack-missing-attrs/: expected  input-ignore
integration-tests/src/test-cases/bind-failure-unpack-non-object/: expected  input
integration-tests/src/test-cases/bind-failure-unpack-unexpected-attrs/: expected  input-ignore
integration-tests/src/test-cases/elemental-map/: expected  input-canonical  input-elemental  input-natural
integration-tests/src/test-cases/forty-two/: expected
integration-tests/src/test-cases/ident-func/: expected  input-natural-ignore
integration-tests/src/test-cases/let-func-application/: input-canonical  input-elemental  input-reduced-ignore
integration-tests/src/test-cases/let-inside-inquiry/: expected  input-bare-ignore  input-canonical-ignore  input-elemental  input-reduced
integration-tests/src/test-cases/let-lit/: input-elemental  input-natural
integration-tests/src/test-cases/map/: expected  (+4 more)
interpreter/: Cargo.toml
interpreter/src/: error.rs  interpret.rs  lib.rs  source.rs
legible/: Cargo.toml
legible/src/: bracketed.rs  bracketseq.rs  envelope.rs  fmtpos.rs  headandtail.rs  indentation.rs  indentstream.rs  innernode.rs  intonode.rs  joint.rs  keyvalue.rs  ldisp.rs  legible.rs  lib.rs  node.rs  position.rs  separatedseq.rs  sequence.rs  stream.rs  text.rs  trial.rs  wrappable.rs  writestr.rs
legible/src/intonode/: implsequences.rs  impltext.rs
listform/: Cargo.toml
listform/src/: lfg.rs  lfiter.rs  lib.rs  listform.rs  sat.rs  tests.rs
parser/: Cargo.toml
parser/src/: delimited.rs  error.rs  expr.rs  keyword.rs  lib.rs  listexpr.rs  listform.rs  parser.rs  restrict.rs  space.rs  tests.rs
parser/src/error/: bare.rs  etype.rs  indent.rs  load.rs  set.rs  sourced.rs
parser/src/expr/: common.rs  effect.rs  object.rs  pattern.rs  proc.rs  procfx.rs  recursive.rs  universal.rs
parser/src/parser/: base.rs  common.rs  pattern.rs  proc.rs  procfx.rs  pure.rs  recursive.rs  universal.rs
parser/src/tests/: corpus.rs  unit.rs
transform/: Cargo.toml
transform/src/: lib.rs  tests.rs  xform.rs
transform/src/xform/: baseimpls.rs  exprimpls.rs  fqpimpls.rs  listimpls.rs  lmalimpls.rs  objimpls.rs  patimpls.rs  rcidimpls.rs  stmtimpls.rs
value/: Cargo.toml
value/src/: coerce.rs  func.rs  lib.rs  list.rs  object.rs  proc.rs  query.rs  scope.rs  thunk.rs  tryaslist.rs  valref.rs  value.rs
value/src/coerce/: failure.rs
value/src/scope/: frame.rs  scope.rs  scoperef.rs  sref.rs  unbound.rs
(+132 files in other folders)
