[workspace]
resolver = "2"
members = [
  "ast/ast",
  "ast/core",
  "ast/effect",
  "ast/fuzz",
  "ast/reduced",
  "attrs",
  "cli",
  "eval",
  "identifier",
  "identmap",
  "integration-tests",
  "interpreter",
  "listform",
  "object",
  "parser",
  "rand-dcomp",
  "source",
  "transform",
  "unparse",
  "value",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "gplv3"
homepage = "https://github.com/nathan-at-least/sappho"

[workspace.dependencies]
aliri_braid = "0.4.0"
anyhow = "1.0.71"
anyhow-std = "0.1.4"
chumsky = "0.9.3"
clap = { version = "3.1.18", features = [ "derive", "cargo" ] }
derive_more = "0.99.17"
derive-new = "0.5.9"
either = "1.13.0"
include_dir = "0.7"
indoc = "1.0.6"
log = "0.4.17"
rand = "0.9.0"
sappho-ast-core = { path = "ast/core" }
sappho-ast-effect = { path = "ast/effect" }
sappho-ast-fuzz = { path = "ast/fuzz" }
sappho-ast = { path = "ast/ast" }
sappho-ast-reduced = { path = "ast/reduced" }
sappho-attrs = { path = "attrs" }
sappho-cli = { path = "cli" }
sappho-eval = { path = "eval" }
sappho-identifier = { path = "identifier" }
sappho-identmap = { path = "identmap" }
sappho-integration-tests = { path = "integration-tests" }
sappho-interpreter = { path = "interpreter" }
sappho-listform = { path = "listform" }
sappho-object = { path = "object" }
sappho-parser = { path = "parser" }
sappho-rand-dcomp = { path = "rand-dcomp" }
sappho-source = { path = "source" }
sappho-transform = { path = "transform" }
sappho-unparse = { path = "unparse" }
sappho-value = { path = "value" }
simplelog = "0.12.0"
test-case = "2.0"
thiserror = "2.0.11"
