[package]
name = "sappho-ast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"
derive-new = "0.5.9"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-object]
path = "../object"

[dev-dependencies]
test-case = "2.0"
