[package]
name = "sappho-ast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
derive-new.workspace = true
sappho-identmap.workspace = true
sappho-legible.workspace = true
sappho-object.workspace = true

[dev-dependencies]
test-case.workspace = true
