[package]
name = "sappho-ast-reduced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"

[dependencies.sappho-ast]
path = "../ast"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-astcore]
path = "../astcore"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-object]
path = "../object"

[dev-dependencies]
test-case = "2.0"
