[package]
name = "sappho-ast-reduced"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"

[dependencies.sappho-ast]
path = "../ast"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-ast-core]
path = "../ast-core"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-object]
path = "../object"

[dev-dependencies]
test-case = "2.0"
