[package]
name = "sappho-ast-reduced"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"

sappho-ast-core.workspace = true
sappho-ast.workspace = true
sappho-identmap.workspace = true
sappho-object.workspace = true
sappho-unparse.workspace = true

[dev-dependencies]
test-case = "2.0"
