[package]
name = "sappho-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-ast-core]
path = "../ast-core"

[dependencies.sappho-listform]
path = "../listform"

[dependencies.sappho-object]
path = "../object"
