[package]
name = "sappho-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-ast-core]
path = "../ast-core"

[dependencies.sappho-listform]
path = "../listform"

[dependencies.sappho-object]
path = "../object"
