[package]
name = "sappho-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
log.workspace = true
simplelog.workspace = true
clap.workspace = true

sappho-interpreter.workspace = true
sappho-parser.workspace = true
sappho-source.workspace = true
sappho-transform.workspace = true
