[package]
name = "sappho-east"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sappho-ast]
path = "../ast"

[dependencies.sappho-gast]
path = "../gast"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-object]
path = "../object"
