[package]
name = "sappho-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99"
log = "0.4.17"

[dependencies.sappho-ast]
path = "../ast"

[dependencies.sappho-ast-reduced]
path = "../ast-reduced"

[dependencies.sappho-ast-core]
path = "../ast-core"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-listform]
path = "../listform"

[dependencies.sappho-value]
path = "../value"

[dev-dependencies.sappho-parser]
path = "../parser"
