[package]
name = "sappho-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99"
log = "0.4.17"

sappho-ast-core.workspace = true
sappho-ast-reduced.workspace = true
sappho-ast.workspace = true
sappho-listform.workspace = true
sappho-unparse.workspace = true
sappho-value.workspace = true

[dev-dependencies]
sappho-parser.workspace = true
