[package]
name = "sappho-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
log.workspace = true
sappho-ast-core.workspace = true
sappho-ast-effect.workspace = true
sappho-ast-reduced.workspace = true
sappho-ast.workspace = true
sappho-identifier.workspace = true
sappho-listform.workspace = true
sappho-unparse.workspace = true
sappho-value.workspace = true

[dev-dependencies]
sappho-parser.workspace = true
