[package]
name = "sappho-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[build-dependencies]
indoc = "1.0.6"
pathutil = "0.1.2"

[dev-dependencies]
derive_more = "0.99.17"

sappho-interpreter.workspace = true
sappho-parser.workspace = true
sappho-transform.workspace = true
