[package]
name = "sappho-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[build-dependencies]
indoc.workspace = true
anyhow-std.workspace = true
anyhow.workspace = true

[dev-dependencies]
anyhow-std.workspace = true
anyhow.workspace = true
derive_more.workspace = true
sappho-interpreter.workspace = true
sappho-parser.workspace = true
sappho-transform.workspace = true
