[package]
name = "sappho-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"
pathutil = "0.1.3"

[dependencies.sappho-eval]
path = "../eval"

[dependencies.sappho-parser]
path = "../parser"

[dependencies.sappho-source]
path = "../source"
