[package]
name = "sappho-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
pathutil.workspace = true
sappho-eval.workspace = true
sappho-parser.workspace = true
sappho-source.workspace = true
