[package]
name = "sappho-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow-std.workspace = true
anyhow.workspace = true
derive_more.workspace = true
sappho-eval.workspace = true
sappho-parser.workspace = true
sappho-source.workspace = true
sappho-transform.workspace = true
