[package]
name = "sappho-listform"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive-new.workspace = true
either.workspace = true
itertools.workspace = true
sappho-legible.workspace = true

[dev-dependencies]
indoc.workspace = true
test-case.workspace = true
