[package]
name = "sappho-listform"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive-new.workspace = true
either.workspace = true
sappho-attrs.workspace = true
sappho-identifier.workspace = true
sappho-unparse.workspace = true

[dev-dependencies]
indoc.workspace = true
test-case.workspace = true
