[package]
name = "sappho-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
chumsky = "0.8"
derive_more = "0.99"

sappho-ast-core.workspace = true
sappho-ast.workspace = true
sappho-identmap.workspace = true
sappho-listform.workspace = true
sappho-object.workspace = true
sappho-source.workspace = true

[dev-dependencies]
test-case = "2.0"
include_dir = "0.7"
