[package]
name = "sappho-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
chumsky.workspace = true
derive_more.workspace = true

sappho-ast-core.workspace = true
sappho-ast.workspace = true
sappho-identmap.workspace = true
sappho-listform.workspace = true
sappho-object.workspace = true
sappho-source.workspace = true

[dev-dependencies]
test-case.workspace = true
include_dir.workspace = true
