[package]
name = "sappho-value"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"
derive-new = "0.5.9"

[dependencies.sappho-ast-core]
path = "../ast-core"

[dependencies.sappho-ast-reduced]
path = "../ast-reduced"

[dependencies.sappho-unparse]
path = "../unparse"

[dependencies.sappho-identmap]
path = "../identmap"

[dependencies.sappho-object]
path = "../object"
