[package]
name = "sappho-value"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more = "0.99.17"
derive-new = "0.5.9"

sappho-ast-core.workspace = true
sappho-ast-reduced.workspace = true
sappho-identmap.workspace = true
sappho-object.workspace = true
sappho-unparse.workspace = true
