[package]
name = "sappho-value"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
derive-new.workspace = true
sappho-ast-core.workspace = true
sappho-ast-reduced.workspace = true
sappho-identmap.workspace = true
sappho-legible.workspace = true
sappho-object.workspace = true
