[package]
name = "sappho-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
derive-new.workspace = true
either.workspace = true
sappho-ast-core.workspace = true
sappho-ast-effect.workspace = true
sappho-identmap.workspace = true
sappho-listform.workspace = true
sappho-object.workspace = true
sappho-unparse.workspace = true
