[package]
name = "sappho-ast-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive-new.workspace = true
rand.workspace = true
sappho-ast.workspace = true
sappho-ast-core.workspace = true
sappho-ast-effect.workspace = true
sappho-identmap.workspace = true
sappho-listform.workspace = true
sappho-object.workspace = true
sappho-rand-dcomp.workspace = true
