[package]
name = "sappho-ast-reduced"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
derive_more.workspace = true
either.workspace = true
sappho-ast-core.workspace = true
sappho-ast-effect.workspace = true
sappho-attrs.workspace = true
sappho-identifier.workspace = true
sappho-object.workspace = true
sappho-unparse.workspace = true

[dev-dependencies]
test-case.workspace = true
